Ajustando os menus de navegação | renomeando links | excluindo | alterando fotografia

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About Us</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Sobre mim</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services">Certificados</a>
             </li>
 
             <li class="nav-item">
@@ -74,15 +74,15 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#testimonials">Testimonials</a>
+              <a class="nav-link js-scroll-trigger" href="#testimonials">Cases</a>
             </li>
 
 			<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
+              <a class="nav-link js-scroll-trigger" href="#blog">GitHub</a>
             </li>
 
 			<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contect Us</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Meu Contato</a>
             </li>
           </ul>
         </div>
@@ -139,17 +139,17 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2>About Dominic.</h2>
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
-						<p>Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo.</p>
+                        <h2>Sobre o Daniel.</h2>                     
+                        <p> As opções que tenho feito, objetivam que eu possa evoluir junto com toda transformação tecnológica. Com isso, desejo que os desafios encontrados possam permitir a aplicação das habilidades desenvolvidas  </p>
+						<p>e o desenvolvimento de novas competências (que envolvem o trabalho em si e as relações), de modo a contribuir, para o crescimento da organização da qual faço parte.</p>
 
-                        <a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
-                        <!-- Minha foto de perfil --><img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded">
+                        <!-- Minha foto de perfil --><img src="uploads/WhatsApp Image 2022-05-26 at 09.57 1.png" alt="" class="img-fluid img-rounded">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -159,7 +159,7 @@
     <div id="services" class="section lb">
         <div class="container">
             <div class="section-title text-left">
-                <h3>Services</h3>
+                <h3>Certificados</h3>
                 <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
             </div><!-- end title -->
 
@@ -225,7 +225,7 @@
 	<div id="portfolio" class="section lb">
 		<div class="container">
 			<div class="section-title text-left">
-                <h3>Portfolio</h3>
+                <h3>Portfólio</h3>
                 <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
             </div><!-- end title -->
 			
@@ -302,7 +302,7 @@
 	 <div id="testimonials" class="section wb">
         <div class="container">
             <div class="section-title text-left">
-                <h3>Testimonials</h3>
+                <h3>Cases</h3>
                 <p>We thanks for all our awesome testimonials! There are hundreds of our happy customers! </p>
             </div><!-- end title -->
 
@@ -393,7 +393,7 @@
 	<div id="blog" class="section lb">
 		<div class="container">
 			<div class="section-title text-left">
-                <h3>Blog</h3>
+                <h3>GitHub</h3>
                 <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
             </div><!-- end title -->
 			
@@ -466,7 +466,7 @@
     <div id="contact" class="section db">
         <div class="container">
             <div class="section-title text-left">
-                <h3>Contact</h3>
+                <h3>Meu Contato</h3>
                 <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
             </div><!-- end title -->
 
@@ -515,11 +515,9 @@
                 <div class="footer-left">
                     <p class="footer-links">
                         <a href="#">Home</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Pricing</a>
-                        <a href="#">About</a>
-                        <a href="#">Faq</a>
-                        <a href="#">Contact</a>
+                        <a href="#">GitHub</a>
+                        <a href="#">Sobre mim</a>
+                        <a href="#">Meu Contato</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">Dominic</a> Design By : 
 					<a href="https://html.design/">html design</a></p>
