--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<h1>Olá, sou o Daniel</h1>
 			<p>"Trabalho como desenvolvedor de sistemas para Web e mobile,<br>atualmente estou trabalhando para a Indústria Bandeirante"</p>
 			<h3 class="cd-headline clip is-full-width">
-				<span>Minhas principais Skill Tech são</span>
+				<span>Minhas principais Skill Tech -</span>
 				<span class="cd-words-wrapper">
 					<b class="is-visible">Web Developer</b>
 					<b>UI/UX</b>
@@ -143,7 +143,7 @@
                         <p> As opções que tenho feito, objetivam que eu possa evoluir junto com toda transformação tecnológica. Com isso, desejo que os desafios encontrados possam permitir a aplicação das habilidades desenvolvidas  </p>
 						<p>e o desenvolvimento de novas competências (que envolvem o trabalho em si e as relações), de modo a contribuir, para o crescimento da organização da qual faço parte.</p>
 
-                        <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" class="sim-btn btn-hover-new" data-text="Download CV"><span>Hook LinkedIn</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
@@ -178,7 +178,7 @@
 						<div class="ser-icon">
 							<i class="flaticon-development"></i>
 						</div>
-						<h2>Responsive Design</h2>
+						<h2>Design Responsivo</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
                 </div><!-- end col -->
@@ -187,7 +187,7 @@
 						<div class="ser-icon">
 							<i class="flaticon-process"></i>
 						</div>
-						<h2>Creative Design</h2>
+						<h2>Frontend</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
                 </div><!-- end col -->
@@ -196,7 +196,7 @@
 						<div class="ser-icon">
 							<i class="flaticon-discuss-issue"></i>
 						</div>
-						<h2>Support</h2>
+						<h2>Backend</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
                 </div><!-- end col -->
@@ -205,7 +205,7 @@
 						<div class="ser-icon">
 							<i class="flaticon-idea"></i>
 						</div>
-						<h2>Web Idea</h2>
+						<h2>Metodologia Ágil</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
                 </div><!-- end col -->
@@ -214,7 +214,7 @@
 						<div class="ser-icon">
 							<i class="flaticon-idea-1"></i>
 						</div>
-						<h2>Graphic Design</h2>
+						<h2>Figma</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
                 </div><!-- end col -->
@@ -467,7 +467,7 @@
         <div class="container">
             <div class="section-title text-left">
                 <h3>Meu Contato</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                <p>Ficarei muito feliz em receber o seu contato. Se preferir, me envie uma mensagem pelo WhatsApp e logo retornarei. <br /> 📲 +55 11 94969-7778 </p>
             </div><!-- end title -->
 
             <div class="row">
@@ -478,28 +478,28 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
-										<input class="form-control" id="name" type="text" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name.">
+										<input class="form-control" id="name" type="text" placeholder="Seu Nome" required="required" data-validation-required-message="Please enter your name.">
 										<p class="help-block text-danger"></p>
 									</div>
 									<div class="form-group">
-										<input class="form-control" id="email" type="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email address.">
+										<input class="form-control" id="email" type="email" placeholder="Seu Email" required="required" data-validation-required-message="Please enter your email address.">
 										<p class="help-block text-danger"></p>
 									</div>
 									<div class="form-group">
-										<input class="form-control" id="phone" type="tel" placeholder="Your Phone" required="required" data-validation-required-message="Please enter your phone number.">
+										<input class="form-control" id="phone" type="tel" placeholder="Seu Telefone" required="required" data-validation-required-message="Please enter your phone number.">
 										<p class="help-block text-danger"></p>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
-										<textarea class="form-control" id="message" placeholder="Your Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+										<textarea class="form-control" id="message" placeholder="Sua Mensagem" required="required" data-validation-required-message="Please enter a message."></textarea>
 										<p class="help-block text-danger"></p>
 									</div>
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-lg-12 text-center">
 									<div id="success"></div>
-									<button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="Send Message" type="submit">Send Message</button>
+									<button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="Send Message" type="submit">Enviar Mensagem</button>
 								</div>
 							</div>
 						</form>
@@ -514,13 +514,13 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                        <a href="#">Home</a>
-                        <a href="#">GitHub</a>
-                        <a href="#">Sobre mim</a>
-                        <a href="#">Meu Contato</a>
+                        <a href="#">linkedIn</a>
+                        <a href="#">Twitter</a>
+                        <a href="#">Instagram</a>
+                        <a href="#">Facebook</a>
                     </p>
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">Dominic</a> Design By : 
-					<a href="https://html.design/">html design</a></p>
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#"></a> Design By: Daniels
+					<!-- <a href="https://html.design/">html design</a></p> -->
                 </div>
             </div>
         </div><!-- end container -->
