--- a/index.html
+++ b/index.html
@@ -514,10 +514,10 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                        <a href="#">linkedIn</a>
-                        <a href="#">Twitter</a>
-                        <a href="#">Instagram</a>
-                        <a href="#">Facebook</a>
+                        <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" target="_blank">linkedIn</a>
+                        <a href="https://twitter.com/SonobeDaniel" target="_blank">Twitter</a>
+                        <a href="https://www.instagram.com/longboarder78/" target="_blank">Instagram</a>
+                        <a href="https://facebook/daniel.sonobesilveira" target="_blank">Facebook</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#"></a> Design By: Daniels
 					<!-- <a href="https://html.design/">html design</a></p> -->
