Sessão Github | inserindo a tag ancora

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <p> As opções que tenho feito, objetivam que eu possa evoluir junto com toda transformação tecnológica. Com isso, desejo que os desafios encontrados possam permitir a aplicação das habilidades desenvolvidas  </p>
 						<p>e o desenvolvimento de novas competências (que envolvem o trabalho em si e as relações), de modo a contribuir, para o crescimento da organização da qual faço parte.</p>
 
-                        <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" class="sim-btn btn-hover-new" data-text="Download CV"><span>Hook LinkedIn</span></a>
+                        <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" target="_blank" class="sim-btn btn-hover-new" data-text="LinkedIn"><span>Hook LinkedIn</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
@@ -394,7 +394,10 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>GitHub</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                <p>Seja bem vindo! Nesta sessão você poderá acompanhar alguns projetos referente a trabalhos e estudos. E para acesar os repositórios completos, acesse o meu perfil clicando ➡ </p> 
+                <br />
+                <a href="https://github.com/Sonobe-br" target="_blank" class="sim-btn btn-hover-new" data-text="GitHub"><span>Hook GitHub</span></a>
+                
             </div><!-- end title -->
 			
 			<div class="row">
