--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
     								<div class="clearfix"></div>
     								<div class="col-lg-12 text-center">
     									<div id="success"></div>
-    									<button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="Send Message" type="submit">Enviar Mensagem</button>
+    									<button id="sendMessageButton" class="sim-btn btn-hover-new" data-text="Enviar Mensagem" type="submit">Enviar Mensagem</button>
     								</div>
     							</div>
     						</form>
