trocando emoji por imagem simbolo do WhatsApp

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             <div class="container">
                 <div class="section-title text-left">
                     <h3>Meu Contato</h3>
-                    <p>Ficarei muito feliz em receber o seu contato. Se preferir, me envie uma mensagem pelo WhatsApp e logo retornarei. <br /> 📲 +55 11 94969-7778 </p>
+                    <p>Ficarei muito feliz em receber o seu contato. Se preferir, me envie uma mensagem pelo WhatsApp e logo retornarei. <br /> <img src="./images/whatsapp-logo-7.png" width="30" height="30" > +55 11 94969-7778 </p>
                 </div><!-- end title -->
 
                 <div class="row">
