Inserção de texto HTML

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     		<div class="container">
     			<div class="section-title text-left">
                     <h3>Portfólio</h3>
-                    <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                    <p> Essa sessão é uma compilação de materiais ou trabalhos desenvolvidos que demonstra suas habilidades, competências, qualificações e experiências.</p>
                 </div><!-- end title -->
             
     			<div class="gallery-menu row">
@@ -304,7 +304,7 @@
             <div class="container">
                 <div class="section-title text-left">
                     <h3>Cases</h3>
-                    <p>We thanks for all our awesome testimonials! There are hundreds of our happy customers! </p>
+                    <p> Ao longo de minha vida trabalhei e contribui com algumas empresas. </p>
                 </div><!-- end title -->
 
                 <div class="row">
@@ -484,7 +484,7 @@
             <div class="container">
                 <div class="section-title text-left">
                     <h3>Meu Contato</h3>
-                    <p>Ficarei muito feliz em receber o seu contato. Se preferir, me envie uma mensagem pelo WhatsApp e logo retornarei. <br /> <img src="./images/whatsapp-logo-7.png" width="30" height="30" > +55 11 94969-7778 </p>
+                    <p>Ficarei muito feliz em receber o seu contato. Se preferir, envie-mme uma mensagem via WhatsApp. <br /> <img src="./images/whatsapp-logo-7.png" width="30" height="30" > +55 11 94969-7778 </p>
                 </div><!-- end title -->
 
                 <div class="row">
