ajuste do portfólio

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     		<div class="container">
     			<div class="section-title text-left">
                     <h3>Portfólio</h3>
-                    <p> Essa sessão é uma compilação de materiais ou trabalhos desenvolvidos que demonstra suas habilidades, competências, qualificações e experiências.</p>
+                    <p> Essa sessão é uma compilação de materiais e trabalhos desenvolvidos que demonstram algumas habilidades, competências, qualificações e experiências.</p>
                 </div><!-- end title -->
             
     			<div class="gallery-menu row">
