inserção do Octocat (gato github) no html e o posisionamento trabalhado no CSS

--- a/index.html
+++ b/index.html
@@ -400,7 +400,8 @@
     	<div id="blog" class="section lb">
     		<div class="container">
     			<div class="section-title text-left">
-                    <h3>GitHub</h3>
+                    <h3>GitHub</h3> <img class="github" src="./images/logo-github.png" weight="80" height="80" alt="">
+                         
                     <p>Seja bem vindo! Nesta sessão você poderá acompanhar alguns projetos referente a trabalhos e estudos. E para acesar os repositórios completos, acesse o meu perfil clicando ➡ </p> 
                     <br />
                     <a href="https://github.com/Sonobe-br" target="_blank" class="sim-btn btn-hover-new" data-text="GitHub"><span>Aperte-me </span></a>
@@ -484,7 +485,7 @@
             <div class="container">
                 <div class="section-title text-left">
                     <h3>Meu Contato</h3>
-                    <p>Ficarei muito feliz em receber o seu contato. Se preferir, envie-mme uma mensagem via WhatsApp. <br /> <img src="./images/whatsapp-logo-7.png" width="30" height="30" > +55 11 94969-7778 </p>
+                    <p>Ficarei muito feliz em receber o seu contato. Se preferir, envie-me uma mensagem via WhatsApp. <br /> <img src="./images/whatsapp-logo-7.png" width="30" height="30" > +55 11 94969-7778 </p>
                 </div><!-- end title -->
 
                 <div class="row">
