--- a/index.html
+++ b/index.html
@@ -244,18 +244,18 @@
     			<div class="gallery-list row">
     				<div class="col-md-4 col-sm-6 gallery-grid gal_a gal_b">
     					<div class="gallery-single fix">
-    						<img src="uploads/gallery_img-01.jpg" class="img-fluid" alt="Image">
+    						<img src="uploads/gallery01-a.png" class="img-fluid" alt="Image">
     						<div class="img-overlay">
-    							<a href="uploads/gallery_img-01.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+    							<a href="uploads/gallery01-a.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
     						</div>
     					</div>
     				</div>
                 
     				<div class="col-md-4 col-sm-6 gallery-grid gal_c gal_b">
     					<div class="gallery-single fix">
-    						<img src="uploads/gallery_img-02.jpg" class="img-fluid" alt="Image">
+    						<img src="uploads/gallery02-a.png" class="img-fluid" alt="Image">
     						<div class="img-overlay">
-    							<a href="uploads/gallery_img-02.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+    							<a href="uploads/gallery02-a.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
     						</div>
     					</div>
     				</div>
@@ -271,9 +271,9 @@
                 
     				<div class="col-md-4 col-sm-6 gallery-grid gal_b gal_a">
     					<div class="gallery-single fix">
-    						<img src="uploads/gallery_img-04.jpg" class="img-fluid" alt="Image">
+    						<img src="uploads/gallery02-b.png" class="img-fluid" alt="Image">
     						<div class="img-overlay">
-    							<a href="uploads/gallery_img-04.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+    							<a href="uploads/gallery02-b.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
     						</div>
     					</div>
     				</div>
@@ -330,7 +330,7 @@
                                 </div>
                                 <div class="testi-meta">
                                    <!--  <img src="uploads/testi_02.png" alt="" class="img-fluid alignleft"> -->
-                                    <h4>Santana <small>- São Paulo/SP</small></h4>
+                                    <h4>Santo Amaro <small>- São Paulo/SP</small></h4>
                                 </div>
                                 <!-- end testi-meta -->
                             </div>
