--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Basic -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">   
-        <!-- Mobile Metas -->
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-         <!-- Site Metas -->
         <title>Daniel Sonobe Silveira</title>  
         <meta name="keywords" content="">
         <meta name="description" content="">
@@ -14,29 +11,19 @@
         <!-- Site Icons -->
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
         <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-        <!-- Bootstrap CSS -->
+
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!-- Site CSS -->
         <link rel="stylesheet" href="style.css">
-        <!-- Responsive CSS -->
         <link rel="stylesheet" href="css/responsive.css">
-        <!-- Custom CSS -->
         <link rel="stylesheet" href="css/custom.css">
-    	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-          <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+    	<script src="js/modernizr.js"></script>
     </head>
     <body id="page-top" class="politics_version">
-        <!-- LOADER -->
         <div id="preloader">
             <div id="main-ld">
     			<div id="loader"></div>  
     		</div>
-        </div><!-- end loader -->
-        <!-- END LOADER -->
-        <!-- Navigation -->
+        </div>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
           <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -81,12 +68,14 @@
     				<span>Minhas principais Skill Tech -</span>
     				<span class="cd-words-wrapper">
     					<b class="is-visible">Web Developer</b>
-    					<b>UI/UX</b>
     					<b>HTML5</b>
     					<b>CSS3</b>
+    					<b>Bootstrap</b>
     					<b>JavaScript</b>
     					<b>Java</b>
     					<b>Figma</b>
+    					<b>Kanban</b>
+    					<b>Planner Microsoft</b>
     				</span>
     			</h3>
     		</div>
@@ -283,36 +272,27 @@
                                     <p class="lead">Atuo na intersecção entre negócios, marketing e programação, colaborando com o planejamento, o controle das etapas e as equipes envolvidas nos projetos de desenvolvimento. <br /><br /></p>
                                 </div>
                                 <div class="testi-meta">
-                                   <!--  <img src="uploads/testi_01.png" alt="" class="img-fluid alignleft"> -->
                                     <h4>Bonsucesso <small>- Guarulhos/SP</small></h4>
                                 </div>
-                                <!-- end testi-meta -->
                             </div>
-                            <!-- end testimonial -->
                             <div class="testimonial clearfix">
                                 <div class="desc">
                                     <h3><i class="fa fa-quote-left"></i> Click Web Brasil ⭐ </h3>
                                     <p class="lead">Fui responsável pelo desenvolvimento de programas que atenderam às necessidades específicas das organizações envolvidas. <br /><br /><br /> </p>
                                 </div>
                                 <div class="testi-meta">
-                                   <!--  <img src="uploads/testi_02.png" alt="" class="img-fluid alignleft"> -->
                                     <h4>Santo Amaro <small>- São Paulo/SP</small></h4>
                                 </div>
-                                <!-- end testi-meta -->
                             </div>
-                            <!-- end testimonial -->
                             <div class="testimonial clearfix">
                                 <div class="desc">
                                     <h3><i class="fa fa-quote-left"></i> Hardyfloor ⭐ </h3>
                                     <p class="lead">Durante todo o processo, fui responsável pelo gerenciamento dos indicadores, dos processos de entregas de produtos, maquinários, serviços e das atividades a serem desempenhadas para uma boa execução do projeto. </p>
                                 </div>
                                 <div class="testi-meta">
-                                   <!--  <img src="uploads/testi_03.png" alt="" class="img-fluid alignleft"> -->
                                     <h4>Brooklin <small>- São Paulo/SP</small></h4>
                                 </div>
-                                <!-- end testi-meta -->
                             </div>
-                            <!-- end testimonial -->
                             <div class="testimonial clearfix">
                                 <div class="desc">
                                     <h3><i class="fa fa-quote-left"></i> Systembras Tecnologia ⭐ </h3>
@@ -320,12 +300,10 @@
                                 </div>
                                 <br />
                                 <div class="testi-meta">
-                                    <!-- <img src="uploads/testi_01.png" alt="" class="img-fluid alignleft"> -->
                                     <h4>Bela Vista <small>- São Paulo/SP</small></h4>
                                 </div>
                             </div>
                             <br />   
-                            <!-- end testi-meta -->
                             </div><!-- end testimonial -->
                         </div><!-- end carousel -->
                     </div><!-- end col -->
@@ -461,23 +439,18 @@
                             <a href="https://facebook/daniel.sonobesilveira" target="_blank">Facebook</a>
                         </p>
                         <p class="footer-company-name">All Rights Reserved. &copy; 2022 <a href="#"></a> Design By: Daniels
-    					<!-- <a href="https://html.design/">html design</a></p> -->
                     </div>
                 </div>
             </div><!-- end container -->
         </div><!-- end copyrights -->
         <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
-        <!-- ALL JS FILES -->
         <script src="js/all.js"></script>
-    	<!-- Camera Slider -->
     	<script src="js/jquery.mobile.customized.min.js"></script>
     	<script src="js/jquery.easing.1.3.js"></script> 
     	<script src="js/parallaxie.js"></script>
     	<script src="js/headline.js"></script>
-    	<!-- Contact form JavaScript -->
         <script src="js/jqBootstrapValidation.js"></script>
         <script src="js/contact_me.js"></script>
-        <!-- ALL PLUGINS -->
         <script src="js/custom.js"></script>
         <script src="js/jquery.vide.js"></script>
     </body>
