acrescentando outra feature no html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     					<b>Figma</b>
     					<b>Kanban</b>
     					<b>Planner Microsoft</b>
+    					<b>Monday</b>
     				</span>
     			</h3>
     		</div>
