--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <h2>Sobre o Daniel.</h2>                     
                             <p> As opções que tenho feito, objetivam que eu possa evoluir junto com toda transformação tecnológica. Com isso, desejo que os desafios encontrados possam permitir a aplicação das habilidades desenvolvidas  
     						e o desenvolvimento de novas competências (que envolvem o trabalho em si e as relações), de modo a contribuir, para o crescimento da organização da qual faço parte. </p>    
-                            <p> Meu hobby é praticar esportes (natação, bike, corrida, jiu-jitsu), ler um bom livro, viajar com os meus filhos e curtir o nosso cat 🐈 o Ozzy.</p>
+                            <p> Tenho como hobby a pratica de esportes de endurance, ler um bom livro, assistir séries e curtir os amigos na companhia de um bom vinho.</p>
                             <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" target="_blank" class="sim-btn btn-hover-new" data-text="LinkedIn"><span>Aperte-me</span></a>
                         </div><!-- end messagebox -->
                     </div><!-- end col -->
