--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
             <div class="container">
                 <div class="section-title text-left">
                     <h3>Certificados</h3>
-                    <p>Aperte o botão e acesse as minhas formações mais recentes</p>
+                    <p>Aperte o botão e acesse as minhas formações mais recentes</p> <br />
+                    <a href="https://www.linkedin.com/in/daniel-sonobe-silveira/" target="_blank" class="sim-btn btn-hover-new" data-text="Certificados"><span>Aperte-me</span></a>
                 </div><!-- end title -->
                 <div class="row">
     				<div class="col-md-4">
